--- a/src/components/PostFetch/PostFetch.scss
+++ b/src/components/PostFetch/PostFetch.scss
@@ -1,29 +1,10 @@
 .header {
   width: 100%;
   padding: 1em;
-  background-color: hsla(207, 20%, 91%,1);
+  background-color: white;
   border-radius: 5px;
   box-shadow: 0px 2px 3px 0px rgba(black, 0.2);
 
-}
-
-.grid {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 150px 1fr 150px 200px 200px;
-  grid-column-gap: 10px;
-
-  .grid-item {
-    font-weight: bold;
-    text-transform: uppercase;
-    color: hsla(217, 47%, 52%,1);
-  }
-}
-
-.posts-grid {
-  display: grid;
-  grid-template-columns: 150px 1fr 150px 200px 200px;
-  grid-column-gap: 10px;
 }
 
 .filters-wrapper {
@@ -83,14 +64,47 @@
 }
 
 .post {
+  width: 100%;
+  max-width: 300px;
+  height: 400px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0px 2px 3px rgba(black, 0.3);
+  margin-bottom: 1em;
+  overflow: hidden;
+  &:not(:last-child) {
+    margin-right: 1em;
+  }
   .upvotes {
-    color: hsla(187, 100%, 40%,1);
+    width: 100%;
+    color: white;
+    background: linear-gradient(319deg, rgba(92,189,214,1) 0%, rgba(87,46,222,1) 100%);
+    padding: 0.5em;
   }
 
-  .title,
-  .comments,
-  .author {
-    color: hsla(211, 12%, 48%,1);
-    line-height: 1.8em;
+  .title {
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: hsla(191, 41%, 34%,1);
   }
+}
+
+.current-subreddit {
+  background-color: hsla(210, 29%, 29%,1);
+  color: white;
+  padding: 1em;
+  border-radius: 8px;
+  box-shadow: 0px 2px 5px rgba(black, 0.3);
+  font-weight: 700;
+}
+
+.publish-tag {
+  font-style: italic;
+  font-size: 0.9rem;
+  color: hsla(211, 12%, 48%,1);
+}
+
+.post-list {
+  width: 100%;
+  flex-wrap: wrap;
 }
