--- a/src/index.scss
+++ b/src/index.scss
@@ -3,12 +3,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  background-color:hsl(210, 20%, 99%);
   * {
     box-sizing: border-box;
   }
@@ -17,6 +15,17 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  color: hsla(211, 12%, 48%,1);
 }
 
 .btn-primary {
@@ -83,4 +92,8 @@ ul {
   font-weight: bold;
   text-decoration: none;
   font-size: 0.8rem;
+}
+
+.highlight-text {
+  color:hsla(55, 99%, 69%,1);
 }
