--- a/src/components/Loading/Loading.scss
+++ b/src/components/Loading/Loading.scss
@@ -2,7 +2,7 @@
 .loading-wrapper {
   margin-top: 10em;
   position: relative;
-  h2 {
+  h2, h4 {
     text-transform: uppercase;
     font-size: 1rem;
     color: hsla(281, 44%, 70%, 1);
