got series only working

--- a/src/index.scss
+++ b/src/index.scss
@@ -86,6 +86,10 @@ ul {
   margin-left: 0.5em;
 }
 
+.btn-tiertiary.active {
+  
+}
+
 .link {
   text-transform: uppercase;
   color: hsla(211, 12%, 48%,1);
