--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import './atomic/main.scss';
+@import './colours.scss';
 
 body {
   margin: 0;
@@ -47,6 +48,7 @@ p {
   text-transform: uppercase;
   box-shadow: 0px 2px 10px rgba(black, 0.3);
   white-space: nowrap;
+  outline: none;
   i { 
     margin-right: 10px;
   }
@@ -87,7 +89,8 @@ ul {
 }
 
 .btn-tiertiary.active {
-  
+  background-color: $yellow7;
+  color: $grey3;
 }
 
 .link {
