--- a/src/index.scss
+++ b/src/index.scss
@@ -79,12 +79,13 @@ ul {
   flex:1 ;
   border-radius: 5px;
   border: 1px solid hsla(0,0%,93%,1);
-  padding: 0.5em 1em;
+  padding: 1em;
   outline: none;
 }
 .btn-tiertiary {
   color: hsla(211, 12%, 48%,1);
   box-shadow: none;
+  padding: 1em;
   margin-left: 0.5em;
 }
 
