--- a/src/components/PostFetch/PostFetch.scss
+++ b/src/components/PostFetch/PostFetch.scss
@@ -78,7 +78,7 @@
   .upvotes {
     width: 100%;
     color: white;
-    background: linear-gradient(319deg, rgba(92,189,214,1) 0%, rgba(87,46,222,1) 100%);
+    background: rgba(87,46,222,1);
     padding: 0.5em;
   }
 
