--- a/src/components/PostFetch/PostFetch.scss
+++ b/src/components/PostFetch/PostFetch.scss
@@ -72,9 +72,7 @@
   box-shadow: 0px 2px 3px rgba(black, 0.3);
   margin-bottom: 1em;
   overflow: hidden;
-  &:not(:last-child) {
-    margin-right: 1em;
-  }
+ 
   .upvotes {
     width: 100%;
     color: white;
@@ -107,6 +105,7 @@
 .post-list {
   width: 100%;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 768px) {
