--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -26,6 +26,7 @@
   background-color: white;
   transform: translateX(-270px);
   transition: all 0.2s ease;
+  z-index:1;
   ul {
     margin-top: 5em;
   }
