--- a/src/Pages/About/About.scss
+++ b/src/Pages/About/About.scss
@@ -14,3 +14,17 @@
     font-size: 1.2rem;
   }
 }
+
+@media screen and (max-width:425px) {
+  .about-wrapper {
+    h1 {
+      font-size: 10vw;
+    }
+
+    p {
+      font-size: 1rem;
+      margin: 0 1em;
+      
+    }
+  }
+}
