--- a/src/index.scss
+++ b/src/index.scss
@@ -114,3 +114,10 @@ ul {
   max-width: 1300px;
   width: 100%;
 }
+
+.subtle {
+  width: 100%;
+  text-align: center;
+  max-width: 600px;
+  color: $grey7;
+}
