--- a/src/components/PostFetch/PostFetch.scss
+++ b/src/components/PostFetch/PostFetch.scss
@@ -74,13 +74,14 @@
   box-shadow: 0px 2px 3px rgba(black, 0.3);
   margin-bottom: 1em;
   overflow: hidden;
-  border: 2px solid transparent;
-
+  transition: all 0.2s ease;
   .upvotes {
     width: 100%;
     color: white;
     background: rgba(87,46,222,1);
     padding: 0.5em;
+    transition: all 0.2s ease;
+
   }
 
   .title {
@@ -112,7 +113,16 @@
 }
 
 .active-post-select {
-  border: 2px solid $blue6;
+  box-shadow: 0px 2px 20px rgba($accent, 0.4);
+
+  .upvotes {
+    background:$accent;
+  }
+
+  .btn-select {
+    color: white;
+    background-color: $accent;
+  }
 }
 
 @media screen and (max-width: 768px) {
