--- a/src/components/ConfirmModal/ConfirmModal.scss
+++ b/src/components/ConfirmModal/ConfirmModal.scss
@@ -36,6 +36,11 @@
   height: 50px;
   border-radius: 50%;
   background-color: rgba($grey6, 0.2);
+  transition: all 0.2s ease;
+  &:hover {
+    background-color: white;
+    color: $grey3;
+  }
 }
 
 .modal-inner-body {
