refactor some code

--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -1,6 +1,7 @@
 @import '../../colours.scss';
 
 .nav-toggle {
+  position: fixed;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -18,7 +19,7 @@
 }
 
 .navbar {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   height: 100%;
