--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -7,7 +7,7 @@
 }
 
 .post-actions {
-  .btn-link {
+  .link {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,56 +22,5 @@
       background-color: $grey7;
       color: white;
     }
-  }
-}
-
-.post {
-  width: 100%;
-  max-width: 300px;
-  height: 400px;
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 0px 2px 3px rgba(black, 0.3);
-  margin-bottom: 1em;
-  overflow: hidden;
-  transition: all 0.2s ease;
-  .upvotes {
-    width: 100%;
-    color: white;
-    background: rgba(87,46,222,1);
-    padding: 0.5em;
-    transition: all 0.2s ease;
-    font-size: 1.5rem;
-  }
-
-  .title {
-    font-weight: bold;
-    font-size: 1.2rem;
-    color: hsla(191, 41%, 34%,1);
-  }
-}
-
-.publish-tag {
-  font-style: italic;
-  font-size: 0.9rem;
-  color: hsla(211, 12%, 48%,1);
-}
-
-.post-list {
-  width: 100%;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.active-post-select {
-  box-shadow: 0px 2px 20px rgba($accent, 0.4);
-
-  .upvotes {
-    background:$accent;
-  }
-
-  .btn-select {
-    color: white;
-    background-color: $accent;
   }
 }
