--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -5,11 +5,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 25px;
-  width: 35px;
+  height: 45px;
+  width: 55px;
   left: 2em;
   top: 2em;
   z-index: 2;
+  background-color: white;
+  box-shadow: 0px 1px 1px rgba(black, 0.2);
+  padding: 0.5em;
   .toggle-line {
     width: 100%;
     height: 3px;
