--- a/src/Pages/AccountPage/AccountPage.scss
+++ b/src/Pages/AccountPage/AccountPage.scss
@@ -1,8 +1,13 @@
 @import '../../colours.scss';
 
+.default-message {
+  width: 100%;
+  max-width: 500px;
+}
 .default-message-input {
+  display: block;
   font-family: 'Poppins', sans-serif;
-  width: 500px;
+  width: 100%;
   height: 300px;
   border: 1px solid $grey8;
   border-radius: 5px;
@@ -21,4 +26,24 @@
   padding: 0.5em;
   border-radius: 0.5em;
   border: 1px solid $grey9;
+}
+
+
+@media screen and (max-width: 375px) {
+  .account-footer {
+    flex-direction: column;
+    button {
+      margin-top: 3em;
+    }
+  }
+}
+
+@media screen and (max-width: 507px) {
+  .account-wrapper {
+    padding: 0 1em;
+  }
+
+  .default-message {
+    width: 100%;
+  }
 }
