--- a/src/components/Loading/AppLoader.scss
+++ b/src/components/Loading/AppLoader.scss
@@ -16,6 +16,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  position: absolute;
+  z-index: 4;
 }
 .lds-default {
   display: inline-block;
