--- a/src/components/ConfirmModal/ConfirmModal.scss
+++ b/src/components/ConfirmModal/ConfirmModal.scss
@@ -72,3 +72,10 @@
     color: $green;
   }
 }
+
+@media screen and (max-width: 572px) {
+  .modal-body {
+    height: 100%; 
+    max-width: 100%;
+  }
+}
