--- a/src/components/ConfirmMessages/ConfirmMessages.scss
+++ b/src/components/ConfirmMessages/ConfirmMessages.scss
@@ -15,3 +15,13 @@
   padding: 0.5em;
   border-radius: 5px;
 }
+
+@media screen and (max-width:572px) {
+  .confirm-messages-wrapper {
+    width: 100%;
+  }
+
+  .increment {
+    display: none;
+  }
+}
