changed a few things

--- a/src/Pages/AccountPage/AccountPage.scss
+++ b/src/Pages/AccountPage/AccountPage.scss
@@ -1,5 +1,9 @@
 @import '../../colours.scss';
 
+.account-wrapper {
+  height: 100%;
+  padding: 1em;
+}
 .default-message {
   width: 100%;
   max-width: 500px;
