--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -21,15 +21,8 @@
 }
 
 .navbar {
-  position: fixed;
-  left: 0;
-  top: 0;
+  width: 100%;
   height: 100%;
-  width: 270px;
-  background-color: white;
-  transform: translateX(-270px);
-  transition: all 0.2s ease;
-  z-index:1;
   ul {
     margin-top: 5em;
   }
@@ -62,9 +55,28 @@
 }
 
 .extended {
-  transform: translateX(0);
+  transform: translateX(0) !important;
 }
 
+.nav-username {
+  text-align: center;
+  font-weight: 400;
+  margin-bottom: 1em;
+}
+
+.navbar-wrapper {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 270px;
+  transform: translateX(-270px);
+  transition: all 0.2s ease;
+  z-index:1;
+}
 @media screen and (max-width: 584px) {
   .close-modal {
     top: 1em ;
