--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -28,7 +28,7 @@
 .post {
   width: 100%;
   max-width: 300px;
-  height: 400px;
+  height: 450px;
   background-color: white;
   border-radius: 5px;
   box-shadow: 0px 2px 3px rgba(black, 0.3);
@@ -53,7 +53,7 @@
 
 .publish-tag {
   font-style: italic;
-  font-size: 0.9rem;
+  font-size: 1rem;
   color: hsla(211, 12%, 48%,1);
 }
 
@@ -74,4 +74,11 @@
     color: white;
     background-color: $accent;
   }
+}
+
+.sub-detail {
+  background-color: $grey9;
+  padding: 5px 20px;
+  border-radius: 30px;
+  color: $grey3;
 }
