--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -28,7 +28,7 @@
 .post {
   width: 100%;
   max-width: 300px;
-  height: 450px;
+  height: 480px;
   background-color: white;
   border-radius: 5px;
   box-shadow: 0px 2px 3px rgba(black, 0.3);
@@ -81,4 +81,27 @@
   padding: 5px 20px;
   border-radius: 30px;
   color: $grey3;
+}
+
+.post-flair {
+  font-style: italic;
+  text-transform: uppercase;
+  font-weight:bold;
+  font-size: 0.8rem;
+}
+
+.series-flair {
+  color: $green;
+}
+
+.child-abuse-flair {
+  color: $accent;
+}
+
+.animal-abuse-flair {
+  color: $orange;
+}
+
+.self-harm-flair {
+  color: $yellow7;
 }
