--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -67,7 +67,7 @@
   box-shadow: 0px 2px 20px rgba($accent, 0.4);
 
   .upvotes {
-    background:$accent;
+    background:$accent !important;
   }
 
   .btn-select {
