RWD new account page nav

--- a/src/layouts/AccountSubnav/AccountSubnav.scss
+++ b/src/layouts/AccountSubnav/AccountSubnav.scss
@@ -17,3 +17,14 @@
     @extend .active-tab;
   }
 }
+
+@media screen and (max-width: 372px) {
+  .account-subnav {
+    display: flex;
+    flex-direction: column;
+
+    li {
+      margin: 1em 0.5em;
+    }
+  }
+}
