--- a/src/index.scss
+++ b/src/index.scss
@@ -50,6 +50,7 @@ p {
   box-shadow: 0px 2px 10px rgba(black, 0.3);
   white-space: nowrap;
   outline: none;
+  transition: all 0.2s ease;
   i { 
     margin-right: 10px;
   }
@@ -79,7 +80,7 @@ ul {
   height: 100%;
   flex:1 ;
   border-radius: 5px;
-  border: 1px solid hsla(0,0%,93%,1);
+  border: 2px solid hsla(0,0%,93%,1);
   padding: 1em;
   outline: none;
 }
@@ -93,6 +94,16 @@ ul {
 .btn-tiertiary.active {
   background-color: $yellow7;
   color: $grey3;
+}
+
+.btn-tiertiary.danger {
+  border: 2px solid $accent;
+  color: $accent;
+
+  &:hover {
+    background-color: $accent;
+    color: white;
+  }
 }
 
 .link {
