--- a/src/components/PostFetchComp/PostFetchComp.scss
+++ b/src/components/PostFetchComp/PostFetchComp.scss
@@ -3,7 +3,7 @@
 .post-fetch-header {
   width: 100%;
   padding: 1em;
-  background-color: white;
+  background-color: $grey3;
   border-radius: 5px;
   box-shadow: 0px 2px 3px 0px rgba(black, 0.2);
 
@@ -77,8 +77,9 @@
   font-weight: 700;
 }
 
-.post-fetch-wrapper {
-  
+.form-label.light {
+  color: $grey10;
+  margin-bottom: 1em;
 }
 
 @media screen and (max-width: 768px) {
@@ -111,19 +112,7 @@
     }
   }
 }
-@media screen and (max-width: 375px) {
-  .mobile-fetch-inputs {
-    flex-direction: column;
-
-    .select {
-      margin-top: 1em;
-    }
-  }
-
-
-}
-
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 603px) {
   .post-fetch-header {
     flex-direction: column;
   }
@@ -132,4 +121,11 @@
     margin-top: 1em;
   }
 
+  .mobile-fetch-inputs {
+    flex-direction: column;
+
+    .select {
+      margin-top: 1em;
+    }
+  }
 }
