--- a/src/index.scss
+++ b/src/index.scss
@@ -41,10 +41,15 @@ ul {
   width: 100%;
   height: 100%;
   flex:1 ;
-  border-radius: 5px;
-  border: 2px solid hsla(0,0%,93%,1);
-  padding: 1em;
+  border-radius: 3px;
+  padding: 1.5em 1em;
   outline: none;
+  border: none;
+  background-color: $grey8;
+  transition: all 0.2s ease;
+  &:focus {
+    background-color: white;
+  }
 }
 
 
