more style changes

--- a/src/components/PostFetchComp/PostFetchComp.scss
+++ b/src/components/PostFetchComp/PostFetchComp.scss
@@ -69,8 +69,8 @@
 
 .current-subreddit {
   width: 100%;
-  background-color: hsla(210, 29%, 29%,1);
-  color: white;
+  background-color: $grey9;
+  color: $grey2;
   padding: 1em;
   border-radius: 8px;
   box-shadow: 0px 2px 5px rgba(black, 0.3);
