--- a/src/index.scss
+++ b/src/index.scss
@@ -66,6 +66,11 @@ ul {
   font-weight: bold;
 }
 
+.highlight-text-dark {
+  color:$blue5;
+  font-weight: bold;
+}
+
 .hidden {
   display: none;
 }
