--- a/src/components/ConfirmModal/ConfirmModal.scss
+++ b/src/components/ConfirmModal/ConfirmModal.scss
@@ -20,7 +20,8 @@
   max-width: 900px;
   border-radius: 10px;
   box-shadow: 0px 3px 10px rgba(black, 0.5);
-  height: 700px;
+  min-height: 700px;
+  height: 100%;
   padding: 1em;
 }
 
