--- a/src/layouts/DashboardTopbar/DashboardTopbar.scss
+++ b/src/layouts/DashboardTopbar/DashboardTopbar.scss
@@ -10,3 +10,9 @@
   display: flex;
   justify-content: flex-end;
 }
+
+.profile-image.small {
+  border-radius: 3px;
+  width: 30px;
+  height: 30px;
+}
