--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color:hsl(210, 20%, 99%);
+  background-color:#F8F7FC;
   * {
     box-sizing: border-box;
   }
