add send message

--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -25,3 +25,23 @@
   padding: 1em;
   border-radius: 5px;
 }
+
+.chat-send-form {
+  display: flex;
+  align-items: center;
+  position: sticky;
+  bottom: 10px;
+  width: 100%;
+  background-color: white;
+  padding: 1em;
+  border-radius: 5px;
+  box-shadow: 0px 4px 10px rgba(black, 0.2);
+}
+
+.chat-input {
+  width: 100%;
+  border: none;
+  font-size: 1rem;
+  outline: none;
+  resize: none;
+}
