--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -120,6 +120,22 @@
   animation: spin 2s linear infinite;
 }
 
+.chat-send {
+  border: none;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(45deg, rgba(9,103,210,1) 0%, rgba(173,214,255,1) 100%);
+  font-size: 1.3rem;
+  color: white;
+  margin-left: 1rem;
+  align-self: flex-end;
+  box-shadow: 0px 2px 10px rgba(black, 0.2);
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
