--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -134,6 +134,7 @@
   margin-left: 1rem;
   align-self: flex-end;
   box-shadow: 0px 2px 10px rgba(black, 0.2);
+  outline: none;
 }
 
 @keyframes spin {
