--- a/src/components/UserInbox/UserInbox.scss
+++ b/src/components/UserInbox/UserInbox.scss
@@ -28,6 +28,8 @@
   margin-bottom: 1.5em;
   border-radius: 5px;
   box-shadow:0px 2px 40px rgba(black, 0.05);
+  opacity: 0.5;
+  transition: all 0.2s ease;
 }
 
 .inbox-item-img {
@@ -44,4 +46,8 @@
   width: 350px;
   text-overflow: ellipsis;
   overflow: hidden;
+}
+
+.selected-inbox-message {
+  opacity: 1;
 }
