--- a/src/components/InboxChat/InboxChat.scss
+++ b/src/components/InboxChat/InboxChat.scss
@@ -2,9 +2,13 @@
 
 .chat {
   margin: 2em 0;
+
+ 
 }
 
 .chat-body {
+  width: fit-content;
+  min-width: 50%;
   padding: 1em;
   margin: 0.5em;
   border-radius: 10px;
@@ -32,4 +36,51 @@
 
 .chat-date {
   font-size: 0.8rem;
+}
+.chat-body-wrapper {
+  display: inline-flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.chat-body-wrapper.right {
+  display: flex;
+  flex-direction: column;
+  p,
+  .chat-actions {
+    align-self: flex-end;
+  }
+}
+
+.chat-actions:hover {
+  .chat-action-btn-wrapper {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+
+.chat-action-toggle {
+  display: flex; 
+  align-items: center;
+  margin-left: 1em;
+  span {
+    display: block;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    margin-right: 0.3em;
+    background-color: $grey7;
+  }
+
+}
+
+.chat-action-btn-wrapper {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 100ms linear;
+}
+
+.chat-action-expanded {
+  display: flex;
 }
