--- a/src/index.scss
+++ b/src/index.scss
@@ -111,3 +111,19 @@ ul {
     font-size: 1.2rem;
   }
 }
+
+.message-tags {
+  display: flex;
+  align-items: center;
+}
+
+.message-story-tag {
+  padding: 0.5em 1em;
+ 
+  font-size: 0.7rem;
+  color: $blue6;
+  text-decoration: underline;
+  border-radius: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
