--- a/src/Pages/Dashboard/Dashboard.scss
+++ b/src/Pages/Dashboard/Dashboard.scss
@@ -7,7 +7,7 @@
 .dashboard-inner {
   width: 100%;
   height: 100vh;
-  overflow-y:scroll;
+  overflow-y: auto;
 }
 .dashboard-page-wrapper {
   transition: all 0.2s ease;
