--- a/src/layouts/DashboardTopbar/DashboardTopbar.scss
+++ b/src/layouts/DashboardTopbar/DashboardTopbar.scss
@@ -16,3 +16,15 @@
   width: 30px;
   height: 30px;
 }
+
+.topbar-dropdown-toggle {
+  color: $grey6;
+}
+
+.topbar-account-widget {
+  position: relative;
+  height: 100%;
+  &:hover .dashboard-dropdown  {
+    display: flex;
+  }
+}
