--- a/src/Pages/Dashboard/ReadingList/ReadingList.scss
+++ b/src/Pages/Dashboard/ReadingList/ReadingList.scss
@@ -71,3 +71,40 @@
     opacity: 1;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .mobile-column {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 425px ) {
+  .reading-list-item {
+    .reading-list-item-header-subheader {
+      flex-direction: column;
+      align-items: center;
+
+      h3 {
+        margin: 0;
+      }
+
+      h3,
+      h4 {
+        text-align: center;
+      }
+    }
+
+    .body-toggle {
+      margin-right: 10px;
+    }
+  }
+
+}
+
+@media screen and (max-width: 479px) {
+  .reading-list-body {
+    p {
+      width: 100%;
+    }
+  }
+}
