rwd the dashboard

--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -122,9 +122,9 @@
 
 .chat-send {
   border: none;
+  min-height: 50px;
   border-radius: 50%;
-  height: 50px;
-  width: 50px;
+  min-width: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
