--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -5,12 +5,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 30px;
-  width: 40px;
+  height: 40px;
+  width: 50px;
   left: 2em;
   top: 2em;
   z-index: 2;
-
+  background-color: rgba(white, 0.5);
+  padding: 0.5em;
   .toggle-line {
     width: 100%;
     height: 3px;
