nav bug with styles

--- a/src/app.scss
+++ b/src/app.scss
@@ -6,6 +6,7 @@
   max-width: 1300px;
   justify-content: center;
   align-items: center;
+  padding-bottom: 5em;
 }
 
 @media screen and (max-width: 375px) {
