--- a/src/layouts/DashboardTopbar/DashboardTopbar.scss
+++ b/src/layouts/DashboardTopbar/DashboardTopbar.scss
@@ -27,3 +27,22 @@
     display: flex;
   }
 }
+
+.dash-nav-toggle {
+  width: 30px;
+  height: 40px;
+  transition: all 0.2s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $grey4;
+  flex-direction: column;
+
+  .toggle-line {
+    width: 100%;
+    height: 3px;
+    box-shadow: 0px 0px 3px rgba(black, 0.2);
+      margin: 3px 0;
+    background-color: $grey2;
+  }
+}
