fix modal body style

--- a/src/components/ConfirmModal/ConfirmModal.scss
+++ b/src/components/ConfirmModal/ConfirmModal.scss
@@ -17,8 +17,8 @@
 .modal-body {
   display: flex;
   flex-direction: column;
-  align-self: center;
   background-color: white;
+  height: 900px;
   width: 100%;
   max-width: 900px;
   border-radius: 10px;
