--- a/src/layouts/DashboardNav/DashboardNav.scss
+++ b/src/layouts/DashboardNav/DashboardNav.scss
@@ -30,6 +30,7 @@
   color: $grey3;
   position: relative;
   display: flex;
+  flex-direction: column;
   align-items: center;
   margin: 0.2em 0;
   transition: all 0.2s ease;
@@ -65,6 +66,7 @@
     background-color: $blue6;
     position: absolute;
     left:-1px;
+    top: 0;
     border-radius: 5px;
   }
 }
