--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -46,3 +46,19 @@
   resize: none;
   color: $grey4;
 }
+
+.textarea {
+  display: block;
+  font-family: 'Poppins', sans-serif;
+  width: 100%;
+  height: 300px;
+  border: 1px solid $grey8;
+  border-radius: 5px;
+  padding: 0.5em;
+  color: $grey4;
+  resize: vertical;
+
+  &::placeholder {
+    color: $grey7;
+  }
+}
