update hero img

--- a/src/layouts/Hero/Hero.scss
+++ b/src/layouts/Hero/Hero.scss
@@ -5,6 +5,7 @@
   height: 900px;
   position: relative;
   background-attachment: fixed;
+  background-size: cover;
   &::after {
     content: "";
     display: block;
