--- a/src/components/UserInbox/UserInbox.scss
+++ b/src/components/UserInbox/UserInbox.scss
@@ -11,6 +11,10 @@
   height: calc(100vh - 190px);
 }
 
+.inbox-left-wrapper {
+  width: 25%;
+}
+
 .inbox-message-wrapper {
   position: relative;
   display: flex;
