--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -2,7 +2,7 @@
 
 .nav-toggle {
   position: fixed;
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-between;
   height: 40px;
@@ -22,20 +22,16 @@
 }
 
 .navbar {
-  width: 100%;
-  height: 100%;
   ul {
-    margin-top: 5em;
+    display: flex;
   }
   a {
     width: 100%;
     display: flex;
     color: $grey2;
     text-decoration: none;
-    font-weight: 700;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    padding: 1em 2em;
+    font-weight: 400;
+    padding: 0.5em;
   }
   
   i {
@@ -56,7 +52,6 @@
 }
 
 .extended {
-  transform: translateX(0) !important;
 }
 
 .nav-username {
@@ -67,17 +62,62 @@
 
 .navbar-wrapper {
   display: flex;
-  flex-direction: column;
-  background-color: white;
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 270px;
-  transform: translateX(-270px);
+  align-items: center;
   transition: all 0.2s ease;
-  z-index:3;
+
 }
+
+
+.dashboard-topbar {
+  height: 60px;
+  background-color: white;
+  border-bottom: 1px solid $grey9;
+  width: 100%;
+  padding: 0.5em 1em;
+  align-items: center;
+  display: flex;
+}
+
+.profile-image.small {
+  border-radius: 3px;
+  width: 30px;
+  height: 30px;
+}
+
+.topbar-dropdown-toggle {
+  color: $grey6;
+}
+
+.topbar-account-widget {
+  position: relative;
+  height: 100%;
+  border-left: 1px solid $grey8;
+  padding-left: 1em;
+  margin-left: 0.5em;
+  &:hover .dashboard-dropdown  {
+    display: flex;
+  }
+}
+
+.dash-nav-toggle {
+  width: 30px;
+  height: 40px;
+  transition: all 0.2s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $grey4;
+  flex-direction: column;
+
+  .toggle-line {
+    width: 100%;
+    height: 3px;
+    box-shadow: 0px 0px 3px rgba(black, 0.2);
+      margin: 3px 0;
+    background-color: $grey2;
+  }
+}
+
 @media screen and (max-width: 584px) {
   .close-modal {
     top: 1em ;
