--- a/src/layouts/UsedBy/UsedBy.scss
+++ b/src/layouts/UsedBy/UsedBy.scss
@@ -20,7 +20,7 @@
 .used-by-wrapper {
   width: 100%;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 1em auto;
 
   h3 {
     text-align: center;
