--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color:#F8F7FC;
+  padding-top: 75px;
   * {
     box-sizing: border-box;
   }
