--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -13,4 +13,7 @@
   background-color: white;
   align-items: center;
   padding: 0 1em;
+  height: 75px;
+  box-shadow: 0px 1px 5px rgba(black, 0.1);
+
 }
