--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color:#F8F7FC;
+  background-color:#F0F0F1;
   padding-top: 75px;
   * {
     box-sizing: border-box;
@@ -87,7 +87,7 @@ ul {
 }
 
 .wrapper {
-  max-width: 1300px;
+  max-width: 1920px;
   width: 100%;
 }
 
