--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -28,7 +28,7 @@
 .post {
   width: 100%;
   max-width: 300px;
-  height: 480px;
+  height: auto;
   background-color: white;
   border-radius: 5px;
   box-shadow: 0px 2px 3px rgba(black, 0.3);
