--- a/src/layouts/UsedBy/UsedBy.scss
+++ b/src/layouts/UsedBy/UsedBy.scss
@@ -7,7 +7,7 @@
 }
 
 .used-by-item {
-  margin: 1em;
+  margin: 0.5em 1em;
   opacity: 0.3;
   transition: all 0.2s ease;
   font-size: 1rem;
@@ -20,12 +20,10 @@
 .used-by-wrapper {
   width: 100%;
   max-width: 1200px;
-  margin: 1em auto;
 
   h3 {
     text-align: center;
     font-size: 2rem;
   }
 
-  border-bottom: 1px solid $grey9;
 }
