--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -22,8 +22,9 @@
 
 .form-input {
   border: 1px solid $grey8;
-  padding: 1em;
-  border-radius: 5px;
+  padding: 1em 1.2em;
+  font-size: 0.8rem;
+  border-radius: 3px;
 }
 
 .chat-send-form {
