--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -17,10 +17,10 @@
   border-radius: 5px;
   font-weight: bold;
   text-transform: uppercase;
-  box-shadow: 0px 2px 10px rgba(black, 0.3);
   white-space: nowrap;
   outline: none;
   transition: all 0.2s ease;
+  height: 100%;
   i { 
     margin-right: 10px;
   }
