--- a/src/components/PostFetchComp/PostFetchComp.scss
+++ b/src/components/PostFetchComp/PostFetchComp.scss
@@ -2,16 +2,13 @@
 
 .post-fetch-header {
   width: 100%;
-  padding: 1em;
-  background-color: $grey3;
-  border-radius: 5px;
-  box-shadow: 0px 2px 3px 0px rgba(black, 0.2);
-
+  margin-bottom: 1em;
 }
 
-.filters-wrapper {
-  border-bottom: 1px solid hsla(0,0%,93%,1);
-  padding-bottom: 2em;
+.fetch-inputs {
+  background-color: white;
+  padding: 1em;
+  border-radius: 5px;
 }
 .select__arrow {
   position: absolute;
