--- a/src/components/SelectField/SelectField.scss
+++ b/src/components/SelectField/SelectField.scss
@@ -2,7 +2,7 @@
 
 .select {
   position: relative;
-  display: inline-block;
+  display: flex;
   width: 200px;
   height: 100%;
   background-color: $grey9;
@@ -20,13 +20,17 @@
   background-color: white;
   width: 100%;
   left:0;
-  top: 2.5em;
+  top: 3em;
   border-radius: 3px;
   overflow: hidden;
   box-shadow: 0px 2px 10px rgba(black, 0.1);
+  z-index: 3;
 }
 
 .select-label {
+   p {
+     color: $grey3;
+   }
   i {
     transition: all 0.2s ease;
   }
@@ -52,10 +56,13 @@
   background-color: $grey3;
   
   .select-label {
-    color: white;
+    p {
+      color: white;
+    }
   }
 
   i {
+    color: white;
     transform: rotateZ(180deg);
   }
 }
