--- a/src/layouts/DashboardDropdown/DashboardDropdown.scss
+++ b/src/layouts/DashboardDropdown/DashboardDropdown.scss
@@ -2,7 +2,7 @@
 
 .dropdown-wrapper {
   position: absolute;
-  top: 1.5em;
+  top: 2.5em;
   width: 100%;
   display: none;
 }
@@ -12,7 +12,7 @@
   box-shadow: 0px 3px 30px rgba(black, 0.2);
   padding: 1em;
   border-radius: 5px;
-
+  height: 100%;
   li {
     margin: 0.5em 0;
   }
