--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -17,3 +17,18 @@
   box-shadow: 0px 1px 5px rgba(black, 0.1);
 
 }
+
+@media screen and (min-width: 769px) {
+  .nav-toggle {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navbar,
+  .topbar-account-widget {
+    display: none;
+  }
+
+  
+}
