--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -2,21 +2,20 @@
 
 .nav-toggle {
   position: fixed;
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 40px;
   width: 50px;
-  left: 2em;
-  top: 2em;
-  z-index: 4;
+  right: 1em;
+  top: 1em;
+  z-index: 5;
   background-color: rgba(white, 0.5);
   padding: 0.5em;
   .toggle-line {
+    display: block;
     width: 100%;
     height: 3px;
-    box-shadow: 0px 0px 3px rgba(black, 0.2);
-
     background-color: $grey2;
   }
 }
@@ -50,6 +49,46 @@
 }
 
 .extended {
+  display: flex !important;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba($grey1, 0.9);
+  
+  .nav-link {
+   font-size: 2rem;
+   margin-bottom: 1em; 
+
+   a {
+    color: white;
+    text-decoration: none;
+   }
+  }
+
+  .nav-main-btn {
+    padding: 0.5em;
+  }
+
+  .topbar-account-widget {
+    display: flex !important;
+    height: auto;
+    background-color: white;
+    padding: 1em;
+    border: none;
+    border-radius: 5px;
+    margin-top: 2em;
+    margin-bottom: 2em;
+  }
+
+  .dropdown-wrapper {
+    top: 4em;
+    left: 0;
+  }
 }
 
 .nav-username {
@@ -119,16 +158,26 @@
 .nav-main-btn {
   background-color: $blue7;
   border-radius: 5px;
-  margin-left: 2em;
-  margin-right: 2em;
-
+  margin-left: 1em;
+  margin-right: 1em;
+  display: flex;
+  justify-content: center;
   a {
     color: white;
+    text-decoration: none;
   }  
 
   &:hover {
     background-color: darken($blue7, 5%);
   }
+}
+
+.mobile-navbar-wrapper {
+  display: none;
+}
+
+@media screen and (min-width: 769px) {
+
 }
 @media screen and (max-width: 584px) {
   .close-modal {
@@ -136,3 +185,4 @@
     right: 1em ;
   }
 }
+
