restyling some more

--- a/src/components/Posts/Posts.scss
+++ b/src/components/Posts/Posts.scss
@@ -1,3 +1,13 @@
+
+.post-list {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 300px);
+  grid-column-gap: 5px;
+  grid-row-gap: 10px; 
+  justify-content: space-between;
+}
+
 @media screen and (max-width: 702px) {
   .post-list {
     justify-content: center !important;
