--- a/src/layouts/DashboardDropdown/DashboardDropdown.scss
+++ b/src/layouts/DashboardDropdown/DashboardDropdown.scss
@@ -2,9 +2,10 @@
 
 .dropdown-wrapper {
   position: absolute;
-  top: 2.5em;
+  top: 0;
   width: 100%;
   display: none;
+  padding-top:2.5em;
 }
 .dashboard-dropdown {
   width: 100%;
