--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -101,7 +101,6 @@
   display: flex;
   align-items: center;
   transition: all 0.2s ease;
-
 }
 
 
@@ -177,7 +176,9 @@
 }
 
 @media screen and (min-width: 769px) {
-
+  .nav-toggle {
+    display: none;
+  }
 }
 @media screen and (max-width: 584px) {
   .close-modal {
