--- a/src/layouts/UsedBy/UsedBy.scss
+++ b/src/layouts/UsedBy/UsedBy.scss
@@ -3,7 +3,6 @@
 .used-by-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   margin-top: 1em;
 }
 
@@ -26,10 +25,11 @@
 .used-by-wrapper {
   width: 100%;
   max-width: 1200px;
-
+  padding: 1em;
   h3 {
-    text-align: center;
-    font-size: 2rem;
+    font-size: 1rem;
+    padding-bottom: 1em;
+    border-bottom: 1px solid $grey4;
   }
 
 }
