--- a/src/layouts/Aside/Aside.scss
+++ b/src/layouts/Aside/Aside.scss
@@ -1,7 +1,9 @@
 @import '../../colours.scss';
 
 .aside-wrapper {
-  
+  border-radius: 8px;
+  overflow: hidden;
+  height: 100%;
 }
 
 .aside.lifted {
