fix inbox css bug

--- a/src/components/UserInbox/UserInbox.scss
+++ b/src/components/UserInbox/UserInbox.scss
@@ -2,6 +2,7 @@
 
 .inbox-wrapper {
   width: 100%;
+  max-width: 500px;
 }
 
 .inbox-left-wrapper,
@@ -12,7 +13,7 @@
 }
 
 .inbox-left-wrapper {
-  width: 25%;
+  width: 100%;
 }
 
 .inbox-message-wrapper {
