tried refactoring the way i grab and set profiles

--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -97,8 +97,11 @@
   background-color: $green;
   color: white;
   transition: all 0.2s ease;
+  border: none;
   &:hover {
     background-color: darken($green, 5%);
+    border: none;
+    color: white;
   }
 }
 
