--- a/src/atomic/box.scss
+++ b/src/atomic/box.scss
@@ -100,6 +100,7 @@
 .w-156px      { width: 156px; }
 .w-171px      { width: 171px; }
 .w-190px      { width: 190px; }
+.w-193px      { width: 193px; }
 .w-227px      { width: 227px; }
 .w-234px      { width: 234px; }
 .w-250px      { width: 250px; }
