--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color:#F0F0F1;
+  background-color:#FAFAFA;
   * {
     box-sizing: border-box;
   }
