--- a/src/layouts/Aside/Aside.scss
+++ b/src/layouts/Aside/Aside.scss
@@ -55,12 +55,14 @@
 .aside-wrapper.extended-aside {
   display: flex;
   flex-direction: column;
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
   height: 100%;
   max-height: 600px;
   overflow-y: auto;
   position: fixed;
   right: 0;
+  top: 8em;
   background-color: white;
   padding: 0;
   border-radius: 8px;
