add expanded inbox and made a style change to sidebar aside

--- a/src/layouts/Aside/Aside.scss
+++ b/src/layouts/Aside/Aside.scss
@@ -41,6 +41,7 @@
   background-color: $grey3;
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
+  z-index: 3;
   .aside-toggle-item {
     width: 8px;
     height: 8px;
