--- a/src/Pages/Dashboard/Dashboard.scss
+++ b/src/Pages/Dashboard/Dashboard.scss
@@ -6,11 +6,12 @@
 }
 .dashboard-inner {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow-y: auto;
 }
 .dashboard-page-wrapper {
   transition: all 0.2s ease;
+  padding: 2em 2em 0 2em;
 }
 
 @media screen and (max-width: 768px) {
