--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -63,3 +63,11 @@
     color: $grey7;
   }
 }
+
+.search-large {
+  border: 2px solid $grey8;
+  border-radius: 5px;
+  background-color: white;
+  font-size: 0.8rem;
+  padding:0.7em 0.5em;
+}
