--- a/src/Pages/Dashboard/Dashboard.scss
+++ b/src/Pages/Dashboard/Dashboard.scss
@@ -14,6 +14,10 @@
   padding: 2em 2em 0 2em;
 }
 
+.dashboard-inner-slide {
+  margin-left: 200px;
+}
+
 @media screen and (max-width: 768px) {
   .dashboard-page-wrapper {
     padding: 1em;
