--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -174,6 +174,17 @@
   }
 }
 
+.minimal-btn {
+  background: transparent;
+  border: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: $blue5;
+  i {
+    margin-right: 1em;
+  }
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
