--- a/src/components/ContactsList/ContactsList.scss
+++ b/src/components/ContactsList/ContactsList.scss
@@ -4,19 +4,23 @@
   list-style-type: none;
   width: 100%;
   max-width: 600px;
-  margin-top: 4em;
 }
 
 .contact-list-item {
   border: 1px solid $grey9;
   background-color: white;
-  padding: 0.5em 1em;
+  padding: 1em;
   border-radius: 5px;
   margin: 0.5em 0;
-
+  transition: all 0.2s ease;
   i {
     font-size: 0.8rem;
     color: $blue7;
+  }
+
+  &:hover {
+    background-color: $grey9;
+    cursor: pointer;
   }
 }
 
