--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -110,3 +110,21 @@
     color: white;
   }
 }
+.reading-info {
+  width: 100%;
+  padding: 0.5em;
+  div {
+    color: $grey4;
+    font-size: 0.8rem;
+    margin: 0 0.5em;
+
+    span {
+      color: $blue6;
+      font-weight: bold;
+    }
+  }
+}
+
+.reading-time {
+
+}
