change search input sightly

--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -65,9 +65,9 @@
 }
 
 .search-large {
-  border: 2px solid $grey8;
-  border-radius: 5px;
+  border: 2px solid $grey9;
+  border-radius: 3px;
   background-color: white;
   font-size: 0.8rem;
-  padding:0.7em 0.5em;
+  padding:1em;
 }
