add subreddit to db, remove author from queue

--- a/src/index.scss
+++ b/src/index.scss
@@ -94,6 +94,10 @@ ul {
   font-weight: 300;
 }
 
+.danger-text {
+  color: $accent !important;
+}
+
 .wrapper {
   max-width: 1920px;
   width: 100%;
