--- a/src/Pages/Dashboard/ReadingList/ReadingList.scss
+++ b/src/Pages/Dashboard/ReadingList/ReadingList.scss
@@ -36,6 +36,10 @@
   }
 }
 
+.circle-divider {
+  color: $grey8;
+  font-size: 0.5rem;
+}
 .reading-list-item.opaque {
   opacity: 0.7;
   transition: all 0.2s ease;
@@ -48,6 +52,20 @@
   margin-bottom: 2em;
   border-bottom: 1px solid $grey9;
   padding-bottom: 1em;
+}
+.reading-info {
+  width: 100%;
+  padding: 0.5em;
+  div {
+    color: $grey4;
+    font-size: 0.8rem;
+    margin: 0 0.5em;
+    white-space: nowrap;
+    span {
+      color: $blue6;
+      font-weight: bold;
+    }
+  }
 }
 
 
