--- a/src/components/ConfirmMessages/ConfirmMessages.scss
+++ b/src/components/ConfirmMessages/ConfirmMessages.scss
@@ -73,3 +73,12 @@
     font-size: 6vw;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .confirm-actions {
+    flex-direction: column-reverse;
+    button:nth-child(1) {
+      margin-top: 2em;
+    }
+  }
+}
