add tab nav for readingl ist

--- a/src/Pages/Dashboard/Dashboard.scss
+++ b/src/Pages/Dashboard/Dashboard.scss
@@ -12,6 +12,8 @@
 .dashboard-page-wrapper {
   transition: all 0.2s ease;
   padding: 2em 2em 0 2em;
+      min-width: 288px;
+
 }
 
 .dashboard-inner-slide {
