--- a/src/Pages/Dashboard/ReadingList/ReadingList.scss
+++ b/src/Pages/Dashboard/ReadingList/ReadingList.scss
@@ -65,6 +65,24 @@
     }
 }
 
+.tabs-wrapper {
+  display: flex;
+  margin: 1em;
+}
+
+.tabs-item a {
+  text-decoration: none;
+  color: $grey7;
+  padding: 0.5em 1em;
+  transition: all 0.2s ease;
+}
+
+.tab-item-active {
+  background-color: $blue5;
+  color: white !important;
+  border-radius: 5px;
+  box-shadow: 0px 2px 15px rgba($blue5, 0.4);
+}
 
 @media screen and (max-width: 768px) {
   .mobile-column {
