fix button style issue

--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -125,8 +125,10 @@
 
 .chat-send {
   border: none;
+  height: 50px;
   min-height: 50px;
   border-radius: 50%;
+  width: 50px;
   min-width: 50px;
   display: flex;
   align-items: center;
